<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.varshini.pedometer.UserSettings"
    tools:showIn="@layout/activity_user_settings">
    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->


    <EditText
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="10dp"
        android:hint="@string/settings_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/DOBText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/settings_DOB"
        android:inputType="date"
        android:layout_below="@+id/nameText"
        android:layout_alignLeft="@+id/nameText"
        android:layout_alignStart="@+id/nameText" />

    <EditText
        android:id="@+id/heightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/settings_height"
        android:inputType="numberDecimal"
        android:layout_below="@+id/DOBText"
        android:layout_alignLeft="@+id/DOBText"
        android:layout_alignStart="@+id/DOBText"
        android:layout_alignEnd="@+id/buttonSave" />

    <EditText
        android:id="@+id/weightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/settings_weight"
        android:inputType="numberDecimal"
        android:layout_below="@+id/heightText"
        android:layout_alignLeft="@+id/DOBText"
        android:layout_alignStart="@+id/DOBText"
        android:layout_alignEnd="@+id/heightText" />

    <EditText
        android:id="@+id/genderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/settings_gender"
        android:layout_below="@+id/weightText"
        android:editable="false" />

    <RadioGroup
        android:id="@+id/radioGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/genderText">


        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_radio_male"
            android:layout_below="@+id/DOBText" />



    <RadioButton
        android:id="@+id/radioFemale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settingS_radio_female"
        android:layout_below="@+id/DOBText"
        android:layout_toRightOf="@+id/radioGender" />


    </RadioGroup>


    <EditText
        android:id="@+id/unitsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/settings_unit"
        android:layout_below="@+id/radioGender"
        android:layout_alignLeft="@+id/DOBText"
        android:layout_alignStart="@+id/DOBText"
        android:editable="false" />

    <RadioGroup
        android:id="@+id/radioUnits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/unitsText">


        <RadioButton
            android:id="@+id/radioMetric"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_radio_metric" />



        <RadioButton
            android:id="@+id/radioImperial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_radio_imperial"
            android:layout_toRightOf="@+id/radioMetric" />


    </RadioGroup>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/settings_save"
        android:id="@+id/buttonSave"
        android:layout_below="@+id/radioUnits"
        android:layout_centerHorizontal="true"
        android:onClick="save" />

</RelativeLayout>
